--- a/templates/temporada_detail.html
+++ b/templates/temporada_detail.html
@@ -599,16 +599,12 @@ $(this).remove();
                    <h2>{{ capitulo.titulo }}</h2>
                    
                     </div-->
-                    <div style="position: inline; color: white;">
-                
-                <a class="redbtn" type="button" data-toggle="collapse" data-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample" style="cursor: pointer; position: relative; top: 80px; text-decoration: none; color: white;  ">
-                    Dejar un comentario
-                </a>
-            </div>
+                   
 
             
 
                    </div>
+                   <br>
                    <div class="topbar-filter">
            <p><span id="rva">{{comentariosc}} comentarios </span>encontrados </p>
            <label>Ordenado por:</label>
@@ -618,10 +614,17 @@ $(this).remove();
            </select>
 
           </div>
+           <div style="position: block; color: white; margin-top: -85px;">
+                
+                <a class="redbtn" type="button" data-toggle="collapse" data-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample" style="cursor: pointer; position: relative; top: 80px; text-decoration: none; color: white;  ">
+                    Dejar un comentario
+                </a>
+            </div>
+            <br>
+            <br>
             <!-- Collapsible element -->
-            <br>
-            <br>
-            <div class="collapse container" id="collapseExample">
+            
+            <div class="collapse container" id="collapseExample" style="padding-top: 38px; ">
                 <div class="mt-3">
                  <div class="md-form form-lg">
                  <!-- img width="30" height="30" src="{{ request.user.profile.perfil_img.url }}"-->
@@ -662,7 +665,7 @@ $(this).remove();
 
 <div {% if not request.user == i.user %}  onmouseover="mouse(this)" onmouseout="mouseout(this)" {% endif %} id="mouse{{i.id}}" style="position: relative; top: 60px; " class="mv-user-review-item">
            <div class="user-infor" style="">
-            <img style="border-radius: 4px;" width="50" src="{{ i.user.profile.perfil_img.url }}" alt="" >
+            <img style="border-radius: 50%; width: 50px; height: 50px;" src="{{ i.user.profile.perfil_img.url }}" alt="" >
             <div style=" margin-top: -52px; margin-left: 60px; ">
              <div class="no-star" style="  /* fallback for old browsers */
               color: -webkit-linear-gradient(to right, #ffffff, #fffc00);  /* Chrome 10-25, Safari 5.1-6 */
@@ -791,7 +794,7 @@ $(this).remove();
   <div  class="collapse container" id="collapseExample{{i.id}}z">
   <form class="respv{{i.id}}" method="post" data-url="/waomovies/responder/{{i.slug}}/">
   {% csrf_token %}<div class="md-form">
-   <img width="40"  height="40" style="border: 50%;" src="{{request.user.profile.perfil_img.url}}">
+   <img style="border-radius: 50%; width: 37px; height: 37px;" src="{{request.user.profile.perfil_img.url}}">
     <input autocomplete="off" style="display: inline; width: 40%; position:relative; color: #abb7c4;" id="input-char-counter" placeholder="Añade una respuesta" type="text" length="400" class="form-control" name="respuesta" required><button style="display: inline; background: none; border: none" type="submit"  value="responder" name="" onclick="res(this)" id="v{{i.id}}"><i class="fa fa-send point" style="color: white; cursor: pointer;" ></i></button>
 </div>
   </form>
@@ -821,7 +824,7 @@ $(this).remove();
    <div  onmouseover="mouse_res(this)" onmouseout="mouseout_res(this)" id="rs{{cm.id}}">
     <div class="mv-user-review-item" style="margin-bottom: -6px; width: 70%; position: relative; left: 40px;">
            <div class="user-infor" style="margin-bottom: -0px;">
-            <img style="border-radius: 4px;" width="50" src="{{cm.who.profile.perfil_img.url}}" alt="">
+            <img style="border-radius: 50%; width: 37px; height: 37px;"  src="{{cm.who.profile.perfil_img.url}}" alt="">
             <div style=" margin-top: -52px; margin-left: 60px; ">
              <h4 style=" display: inline;  font-family: roboto; font-size: 16px; color: white;">{{cm.who.username}}</h4>
              {% if request.user == cm.who %}
