responsive capitulos detail

--- a/templates/base.html
+++ b/templates/base.html
@@ -915,7 +915,7 @@ var resultac = document.getElementById('result').style.display= "none";
          
           <div class="col-md-6" style="position: relative; left: 40px;">
           <div class="toggle-search col-md-6" >
-              <i class="fa fa-search" id="searchshower"onclick="mac()" ></i>
+              <i class="fa fa-search" id="searchshower"onclick="mac()" style="color: white;" ></i>
             </div>
             <div class="navbar-toggle col-md-6" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
 
