--- a/templates/temporada_detail.html
+++ b/templates/temporada_detail.html
@@ -55,6 +55,8 @@
                       align-items: center;
                       justify-content: center; 
                       height: 185px;
+                      background-color: rgba(0, 0, 0, 0.4); 
+                      background-blend-mode: soft-light;">
                         
                       </div>  
 <div class="main" >
